--- a/Smack/XIBs/EditUsernameVC.xib
+++ b/Smack/XIBs/EditUsernameVC.xib
@@ -39,6 +39,9 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="upj-5J-Kx4">
                             <rect key="frame" x="299" y="8" width="28" height="28"/>
                             <state key="normal" image="closeButton"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Close button"/>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="closeModalPressed:" destination="-1" eventType="touchUpInside" id="Wlm-bn-OM2"/>
                             </connections>
@@ -51,9 +54,12 @@
                                     <constraints>
                                         <constraint firstAttribute="width" constant="250" id="Jtb-gU-JuJ"/>
                                     </constraints>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Edit username text field"/>
+                                    </userDefinedRuntimeAttributes>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hXn-Ou-XzX">
                                     <rect key="frame" x="0.0" y="35" width="250" height="2"/>
@@ -80,7 +86,7 @@
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                     <real key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Edit username button"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Confirm new username button"/>
                             </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="editUsernamePressed:" destination="-1" eventType="touchUpInside" id="UKk-D4-HvU"/>
