--- a/Smack/XIBs/ProfileVC.xib
+++ b/Smack/XIBs/ProfileVC.xib
@@ -61,6 +61,9 @@
                                             <state key="normal" title="(tap to edit username)">
                                                 <color key="titleColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Edit username button"/>
+                                            </userDefinedRuntimeAttributes>
                                             <connections>
                                                 <action selector="editUsernamePressed:" destination="-1" eventType="touchUpInside" id="KM7-Yl-5OK"/>
                                             </connections>
